# us-watcher

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  _usw-api.bat  _usw-web.bat  _usw-worker.bat  alembic.ini  docker-compose.yml  publish_static.ps1  pyproject.toml  run_us_cycle_via_claude.py  us_prep.py  usw-rebuild.bat  usw-start-all.bat  usw-start-hidden.vbs
.claude/agents/: agent-systems-engineer.md  data-engineer.md  frontend-designer.md  quant-researcher.md  repo-architect.md  security-reviewer.md  test-engineer.md
.github/workflows/: deploy.yml  refresh.yml
alembic/: env.py
alembic/versions/: 279913d4d888_initial_schema.py
apps/api/: main.py
apps/snapshot/: main.py
apps/web/: Dockerfile  UNHEALTHY  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  taskkill  treated  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: index-watcher.tsx  nav.tsx  shell.tsx
apps/web/lib/: api.ts  i18n.tsx  utils.ts
apps/worker/: main.py
config/: universe.yml
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  DATA_DICTIONARY.md  DATA_SOURCES_AND_LICENSES.md  DEPLOYMENT.md  LEGAL_AND_DISCLAIMER.md  MARKET_REGIME_METHODOLOGY.md  OPERATIONS_RUNBOOK.md  PRODUCT_SPEC.md  RECOMMENDATION_METHODOLOGY.md  SECURITY.md  THREAT_MODEL.md  ULTRAPLAN.md
src/us_watcher/: config.py  logging_config.py
src/us_watcher/accuracy/: backtest.py  calibration.py  cycle_calibration.py  evaluate.py  methodology.py  service.py  signal_lab.py
src/us_watcher/agent_service/: orchestrator.py  recommendation_pipeline.py  router.py
src/us_watcher/api/: app.py  deps.py
src/us_watcher/briefing/: service.py
src/us_watcher/db/: models.py  repositories.py  seed.py  types.py
src/us_watcher/domain/: enums.py  fundamentals.py  money.py  time.py  universe.py
src/us_watcher/infrastructure/: db.py  edgar.py  http.py  redis_client.py
src/us_watcher/market/: narrative.py  schemas.py  service.py
src/us_watcher/newsfeed/: service.py
src/us_watcher/notify/: digest.py  telegram.py
src/us_watcher/security/: sanitize.py  ssrf.py
src/us_watcher/worker/: scheduler.py
tests/unit/: test_agents_catalog.py  test_backtest.py  test_briefing_forecast.py  test_calibration.py  test_claude_cli_provider.py  test_cycle_calibration.py  test_fundamentals.py  test_indicators.py  test_marketdata_resilience.py  test_news_catalyst.py  test_recommendation.py  test_recommendation_spotlight.py  test_refresh_route.py  test_regime.py  test_rotation_and_core.py
(+180 files in other folders)
