[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-watcher"
version = "0.1.0"
description = "US-WATCHER — United States equity market intelligence, news analysis, and AI investment-research platform"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Minkyu An" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "sqlalchemy>=2.0.36",
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "httpx>=0.28",
  "apscheduler>=3.11,<4",
  "redis>=5.2",
  "fakeredis>=2.26",
  "structlog>=24.4",
  "pyyaml>=6.0",
  "tzdata>=2024.2",
  "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.8",
  "mypy>=1.14",
  "types-pyyaml>=6.0",
]
prod = [
  "asyncpg>=0.30",
]
llm = [
  "anthropic>=0.49",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# 120 (not 80/100): this is a bilingual KO/EN codebase with inline Korean display
# strings and long descriptive agent specs; wrapping those hurts readability.
line-length = 120
target-version = "py313"
src = ["src", "apps", "tests"]
extend-exclude = [".venv", "apps/web"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "DTZ", "RUF"]
ignore = [
  "B008",    # FastAPI uses function calls (Depends/Query) in argument defaults by design
  "RUF001",  # ambiguous-unicode: this is a bilingual KO/EN app; Korean text legitimately uses · — etc.
  "RUF002",  # ambiguous-unicode in docstrings (same rationale)
  "RUF003",  # ambiguous-unicode in comments (same rationale)
]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately construct naive datetimes (to assert rejection) and use
# long inline fixtures; relax those rules in tests only.
"tests/**" = ["S101", "S105", "S106", "S311", "E501", "DTZ001", "DTZ005"]
"alembic/**" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]
exclude = "(^|/)(\\.venv|apps)/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "apps"]
filterwarnings = ["error::DeprecationWarning:us_watcher.*"]
